--- a/patronesDiseno/patronesDiseno/patronesDiseno.csproj
+++ b/patronesDiseno/patronesDiseno/patronesDiseno.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factory\Factory.cs" />
+    <Compile Include="InjectionDependency\Beer.cs" />
+    <Compile Include="InjectionDependency\DrinkWithBeer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\BeerRepository.cs" />
+    <Compile Include="Repository\IBeerRepository.cs" />
     <Compile Include="Singleton\Log.cs" />
     <Compile Include="Singleton\logWithConstructor.cs" />
     <Compile Include="Singleton\Singleton.cs" />
@@ -52,5 +57,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
