--- a/patronesDiseno/patronesDiseno/patronesDiseno.csproj
+++ b/patronesDiseno/patronesDiseno/patronesDiseno.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\BeerRepository.cs" />
     <Compile Include="Repository\IBeerRepository.cs" />
+    <Compile Include="Repository\IUnitOfWork.cs" />
+    <Compile Include="Repository\UnitOfWork.cs" />
     <Compile Include="Singleton\Log.cs" />
     <Compile Include="Singleton\logWithConstructor.cs" />
     <Compile Include="Singleton\Singleton.cs" />
